# dbt-ide

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  package-lock.json  package.json  requirements.txt  tsconfig.json
crates/api_server/: Cargo.toml
crates/api_server/assets/: index.html  script.js
crates/api_server/src/: main.rs
crates/debug_tree/: Cargo.toml
crates/debug_tree/src/: main.rs
crates/jinja_parser/: Cargo.toml
crates/jinja_parser/fuzz/: Cargo.toml
crates/jinja_parser/fuzz/fuzz_targets/: full.rs  variable.rs
crates/jinja_parser/meta/: syntax.toml  token_kinds.rs.tera
crates/jinja_parser/src/: lexer.rs  parser.rs
crates/language_server/: Cargo.toml
crates/language_server/src/: file.rs  lsp.rs  main.rs  model.rs  position_finder.rs  project.rs  project_spec.rs  server.rs  sql_file.rs  utils.rs
crates/language_server/src/entity/: macr.rs  mod.rs  model.rs  project.rs
crates/language_server/src/files/: macro_file.rs  mod.rs  model_file.rs  project_yml.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: file.rs  lsp.rs  main.rs  mod.rs  model.rs
crates/parser/: Cargo.toml  build.rs
crates/parser/src/: parser.rs
crates/project_parser/: Cargo.toml
crates/project_parser/src/: lib.rs  project.rs  spec.rs
examples/: gitlab
examples/basic/: Makefile  database.env  dbt_project.yml  packages.yml
examples/basic/macros/: macro2.sql  macros.sql
examples/basic/models/example/: my_first_dbt_model.sql
fuzz/: Cargo.toml
fuzz/fuzz_targets/: full.rs  variable.rs
meta/: syntax.toml  syntax_kinds.rs.tera  token_kinds.rs.tera
src/: lib.rs
src/dbt_jinja2/: lexer.rs  parser.rs
src/dbt_jinja2_lsp/: lsp.rs
vscode_client/: package-lock.json  package.json  tsconfig.json
vscode_client/src/: extension.ts
