[package]
name = "dbt-language-server-debug-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbt-jinja-parser = { path = "../jinja_parser" }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }