[package]
name = "dbt-jinja-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
fancy-regex = "0.7.1"
rowan = "0.15.2"
defer-lite = "1.0.0"

[build-dependencies]
toml = "0.5.8"
tera = "1.15.0"
heck = "0.4.0"
glob = "0.3.0"
serde = { version = "1.0.133", features = ["derive"] }