[package]
name = "dbt-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbt-jinja-parser = { path = "../jinja_parser" }
dbt-project-parser = { path = "../project_parser" }
tower-lsp = { version = "0.16.0" }
tokio = { version = "1.17.0", features = ["full"] }
walkdir = "2.3.2"