[package]
name = "dbt-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbt-jinja-parser = { path = "../jinja_parser" }
tower-lsp = { version = "0.16.0" }
tokio = { version = "1.17.0", features = ["full"] }
walkdir = "2.3.2"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dashmap = "5.2.0"
futures = "0.3.21"
rowan = "0.15.4"
derivative = "2.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
